# auth/docs/swagger.yaml
@@ -18,6 +18,13 @@ definitions:
       total_page:
         type: integer
     type: object
+  model.LoginRequest:
+    properties:
+      email:
+        type: string
+      password:
+        type: string
+    type: object
   model.RegisterRequest:
     properties:
       email:
@@ -70,12 +77,45 @@ paths:
       summary: Checking Health Services
       tags:
       - Health Check
+  /login:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: login
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/model.LoginRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/helper.BaseResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/helper.BaseResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/helper.BaseResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/helper.BaseResponse'
+      summary: Login customer/merchant
+      tags:
+      - Auth
   /register:
     post:
       consumes:
       - application/json
       parameters:
-      - description: register user
+      - description: register customer/merchant
         in: body
         name: user
         required: true
@@ -96,7 +136,7 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/helper.BaseResponse'
-      summary: Register users
+      summary: Register customer/merchant
       tags:
       - Auth
   /register/verify:
@@ -133,7 +173,7 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/helper.BaseResponse'
-      summary: Verify Register Users
+      summary: Verify Register customer/merchant
       tags:
       - Auth
 schemes:
